--- a/flaskr/templates/wishlist.html
+++ b/flaskr/templates/wishlist.html
@@ -20,8 +20,8 @@
                     {% for product in products %}
                     <li class="pt-4">
                         <div class="card">
-                            <div class="card-header">
-                                {{ product['productName'] }}
+                            <div class="card-header fw-bold">
+                                {{product['productName']}}
                             </div>
                             <div class="card-body">
                                 <p class="card-text">{{ product["productDescription"] }}</p>
